--- a/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
+++ b/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
@@ -57,6 +57,10 @@
     <Compile Include="Migrations\201812011028311_AddBasket.Designer.cs">
       <DependentUpon>201812011028311_AddBasket.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902180331060_AddCustomers.cs" />
+    <Compile Include="Migrations\201902180331060_AddCustomers.Designer.cs">
+      <DependentUpon>201902180331060_AddCustomers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -77,6 +81,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812011028311_AddBasket.resx">
       <DependentUpon>201812011028311_AddBasket.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902180331060_AddCustomers.resx">
+      <DependentUpon>201902180331060_AddCustomers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
